--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="hardware-knowledge-base">Hardware Knowledge Base</h1>
+<p>Introduction - Hardware Kit</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lHKjEWc8Cbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Interfacing with sensors</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QP5wfBSKQbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
