--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="hardware-knowledge-base">Hardware Knowledge Base</h1>
-<p>Introduction - Hardware Kit</p>
+<h2 id="introduction---hardware-kit">Introduction - Hardware Kit</h2>
+<h3 id=""></h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lHKjEWc8Cbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>Interfacing with sensors</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QP5wfBSKQbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>ESP 32 pinout
+<a href="https://resource.heltec.cn/download/WiFi_LoRa_32/WIFI_LoRa_32_V2.pdf">https://resource.heltec.cn/download/WiFi_LoRa_32/WIFI_LoRa_32_V2.pdf</a></p>
+<p>ESP 8266 Pinout</p>
+<p><img src="file:///d:\OneDrive\OneDrive - TU Wien\KK\notebooks\knowledgebase\ESP8266%20Pinout.jpg" alt="ESP8266 Pinout"></p>
 
     </body>
     </html>
