--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>ESP 32 Pinout</p>
 <p><a href="https://resource.heltec.cn/download/WiFi_LoRa_32/WIFI_LoRa_32_V2.pdf">https://resource.heltec.cn/download/WiFi_LoRa_32/WIFI_LoRa_32_V2.pdf</a></p>
 <p>ESP 8266 Pinout</p>
-<p><img src="file:////assets/ESP8266Pinout.jpg" alt="ESP8266 Pinout"></p>
+<p><img src="https://raw.githubusercontent.com/tuwienubicomp/knowledgebase/main/assets/ESP8266Pinout.jpg" alt="ESP8266 Pinout"></p>
 
     </body>
     </html>
