connecting the board and flashing the firmware

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lHKjEWc8Cbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h2 id="esp32-pinout"><a href="https://resource.heltec.cn/download/WiFi_LoRa_32/WIFI_LoRa_32_V2.pdf">ESP32 Pinout</a></h2>
 <h2 id="esp8266-pinout"><a href="https://raw.githubusercontent.com/tuwienubicomp/knowledgebase/main/assets/ESP8266Pinout.jpg">ESP8266 Pinout</a></h2>
-
+<br>
+<h2 id="connecting-to-the-board">Connecting to the board</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yxSpDjzhgpo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<h2 id="flashing-the-firmware-onto-the-boards">Flashing the firmware onto the boards</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DfQ0Q4Kdkbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
     </html>
