--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
 <br>
 <h2 id="flashing-the-firmware-onto-the-boards">Flashing the firmware onto the boards</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DfQ0Q4Kdkbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<h2 id="digital-input-and-output">Digital input and output</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OlEb2jPtgaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
     </html>
