--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@
 <br>
 <h2 id="digital-input-and-output">Digital input and output</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OlEb2jPtgaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<h2 id="creating-a-python-script-for-your-code">Creating a python script for your code</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Og35JhCPdTc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<h2 id="pulse-width-modulation">Pulse-width Modulation</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tLHiolJnuV0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<h2 id="analog-input">Analog Input</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ZhgWD1Bp3IM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
     </body>
     </html>
