--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 <h2 id="temperature-sensor">Temperature Sensor</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/e8iv4mX5UOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
+<h2 id="example-circuit-connection-for-temperature-sensor"><a href="https://raw.githubusercontent.com/tuwienubicomp/knowledgebase/main/assets/Temperature%20sensor.pdf">Example circuit connection for Temperature Sensor</a></h2>
+<br>
 <br>
 <h2 id="distance-sensor">Distance Sensor</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YU3DCOANzJ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -81,6 +83,22 @@
 <br>
 <h2 id="motion-sensor-and-timers">Motion Sensor and Timers</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2CT5_CMbBnw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+<h2 id="using-the-esp32-on-board-screen">Using The ESP32 On-board Screen</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ffF8vdtLVIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+<h2 id="connecting-to-a-network">Connecting to a Network</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kq_TsluTa84" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+<h2 id="connecting-to-a-server">Connecting to a Server</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0acJCUCUoDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<br>
+<h2 id="creating-a-webserver-on-esp-boards">Creating a Webserver on ESP Boards</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7YHdErmxxZ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
         
     </body>
