--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
 <br>
 <h2 id="connecting-to-a-server">Connecting to a Server</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0acJCUCUoDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2 id="example-code-for-webclient"><a href="https://raw.githubusercontent.com/tuwienubicomp/knowledgebase/main/assets/webclient.py">Example code for webclient</a></h2>
 <br>
 <br>
 <h2 id="creating-a-webserver-on-esp-boards">Creating a Webserver on ESP Boards</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7YHdErmxxZ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2 id="example-code-for-webserver"><a href="https://raw.githubusercontent.com/tuwienubicomp/knowledgebase/main/assets/webserver.py">Example code for webserver</a></h2>
+
         
         
     </body>
